--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{background-color:#161925;}/*#3C4C57*/
 .outtext{text-align:center;padding:10px;border-left-color:#808D8E;border-left-style:solid;border-right-color:#808D8E;border-right-style:solid;
   text-decoration:none; width: 80%; margin-left:auto;margin-right: auto;color:#CBF7ED;font-family: 'Trebuchet MS'; font-size: 16;}
 
-a{color:#E8E9F3;}
+a{color:#706677;}
 
 .project{border-left-color:#C4DACF;border-left-style:solid;border-right-color:#C4DACF;border-right-style:solid;
   text-align: left; padding-left: 3%; width: 70%; margin-left: auto; margin-right: auto; font-family: 'Trebuchet MS';}
