--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ a{color:#706677;font-weight:bold;text-decoration:none;}
 
 .subheader{color:#CBF7ED; font-family: 'Trebuchet MS'; margin-left:auto;margin-right: auto;text-align:center;}
 
-.headlink{color:#808D8E; text-decoration: none; margin-left:auto;margin-right:auto;width:1em;}/*#767B91*/
+/*.headlink{color:#808D8E; text-decoration: none; margin-left:auto;margin-right:auto;width:1em;} #767B91*/
 
 hr{border-color:#C4DACF; width:60%;}/*#C2CAE8*/
 
