--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{background-color:#161925;}/*#3C4C57*/
 
 a{color:#706677;font-weight:bold;text-decoration:none;}
 
-.project{border-left-color:#C4DACF;border-left-style:solid;border-right-color:#C4DACF;border-right-style:solid;
+.project{border-left-color:#EAEBED;border-left-style:solid;border-right-color:#EAEBED;border-right-style:solid;
   text-align: left; padding-left: 3%; width: 70%; margin-left: auto; margin-right: auto; font-family: 'Trebuchet MS';}
 .project h3{color:#CBF7ED;}/*#1B1B1E*/
 .project p{width:300px;color:#808D8E;font-size:12;}/*#1B1B1E*/
@@ -28,7 +28,7 @@ a{color:#706677;font-weight:bold;text-decoration:none;}
 
 /*.headlink{color:#808D8E; text-decoration: none; margin-left:auto;margin-right:auto;width:1em;} #767B91*/
 
-hr{border-color:#C4DACF; width:60%;}/*#C2CAE8*/
+hr{border-color:#C4DACF; width:60%;}/*#C4DACF*/
 
 #dicthead{color:#C2CAE8; font-family: 'Trebuchet MS'; text-align:center; font-weight: bold; font-size: 40;}
 
