--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ a{color:#706677;font-weight:bold;text-decoration:none;}
 .project h3 a{text-decoration: none; color:#CBF7ED;}/*#1B1B1E*/
 
 
-.subheader{color:#FCF7F8; font-family: 'Trebuchet MS'; margin-left:auto;margin-right: auto;text-align:center;}
+.subheader{color:#CBF7ED; font-family: 'Trebuchet MS'; margin-left:auto;margin-right: auto;text-align:center; border-left-color:#FCF7F8;border-left-style:solid;border-right-color:#FCF7F8;border-right-style:solid;}
 
 /*.headlink{color:#808D8E; text-decoration: none; margin-left:auto;margin-right:auto;width:1em;} #767B91*/
 
