--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ a{color:#706677;font-weight:bold;text-decoration:none;}
 
 
 .subheader{color:#CBF7ED;font-family: 'Trebuchet MS';text-align:center; margin-left:auto;margin-right: auto;width: 7%;padding-right:0px;padding-left:0px;border-left-color:#FCF7F8;border-left-style:solid;border-right-color:#FCF7F8;border-right-style:solid;}
+.sublink{font-family: 'Trebuchet MS'; margin-left:auto;margin-right: auto;text-align:center;}
 
 /*.headlink{color:#808D8E; text-decoration: none; margin-left:auto;margin-right:auto;width:1em;} #767B91*/
 
